sample/error/eval_wdt_selectable.bfr
codegen [
  $build { x }
  + x:(1)hoge
]